<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="imageUrl"
            type="String" />

        <variable
            name="title"
            type="String" />

        <variable
            name="status"
            type="String" />

        <variable
            name="popularity"
            type="String" />

        <variable
            name="releaseDate"
            type="String" />


        <variable
            name="rating"
            type="String" />

        <variable
            name="generic"
            type="String" />


        <variable
            name="runtime"
            type="String" />

        <variable
            name="desc"
            type="String" />


    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            tools:context=".activities.MovieDetailsActivity">


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/sliderViewPager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:contentDescription="@string/app_name"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/fadingEdge"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/background_fading_edge"
                app:layout_constraintBottom_toBottomOf="@id/sliderViewPager" />

            <LinearLayout
                android:id="@+id/sliderIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/fadingEdge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/ivPoster" />


            <ImageView
                android:id="@+id/backButton"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_back_button"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/ic_back_"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorTextIcon" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivPoster"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:imageURL="@{imageUrl}"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/sliderViewPager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sliderViewPager" />


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:ellipsize="end"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@{title}"
                android:textColor="@color/colorTextIcon"
                android:textSize="@dimen/_14ssp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPoster"
                app:layout_constraintTop_toBottomOf="@id/sliderIndicator" />


            <TextView
                android:id="@+id/tvPopularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text='@{"Popularity : "+popularity }'
                android:textColor="@color/colorTextOther"
                android:textSize="@dimen/_12ssp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPoster"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@{status}"
                android:textColor="@color/colorTextOther"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPoster"
                app:layout_constraintTop_toBottomOf="@id/tvPopularity" />


            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:ellipsize="end"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@{releaseDate}"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_11ssp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPoster"
                app:layout_constraintTop_toBottomOf="@id/tvStatus" />


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@color/colorTextSecondary"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/ivPoster" />

            <LinearLayout
                android:id="@+id/layoutMisc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/divider">


                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_like"
                    app:tint="@color/colorTextOther" />

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:includeFontPadding="false"
                    android:text="@{rating}"
                    android:textColor="@color/colorTextIcon"
                    tools:text="7.9" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/u2022"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_13sdp" />


                <TextView
                    android:id="@+id/generic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@{generic}"
                    android:textColor="@color/colorTextIcon"
                    tools:text="Drama" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/u2022"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/tvRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8ssp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text='@{runtime + " Min"}'
                    android:textColor="@color/colorTextIcon"
                    android:textSize="@dimen/_12ssp"
                    tools:text="120 Min" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@color/colorTextSecondary"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/layoutMisc" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:ellipsize="end"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:maxLines="4"
                android:text="@{desc}"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_11sdp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/tvReadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:text="@string/read_more"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tvDescription"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />


            <TextView
                android:id="@+id/tvVideos_trailer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_medium"
                android:includeFontPadding="false"
                android:text="@string/trailer_amp_videos"
                android:textColor="@color/colorTextIcon"
                android:textSize="@dimen/_14ssp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvReadMore" />


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/videosViewPager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVideos_trailer" />

            <LinearLayout
                android:id="@+id/videosIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/videosViewPager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/tvSimilarMovies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/ubuntu_medium"
                android:includeFontPadding="false"
                android:text="@string/similar_movies"
                android:textColor="@color/colorTextIcon"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/videosViewPager"
                app:layout_constraintStart_toStartOf="@id/videosViewPager"
                app:layout_constraintTop_toBottomOf="@id/videosViewPager" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similarMoviesVP"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSimilarMovies" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_56sdp"
                android:layout_height="@dimen/_56sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/dot_loading" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>